--- a/configuração/manifest.json
+++ b/configuração/manifest.json
@@ -7,7 +7,7 @@
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "/icons/icon-192x192.png",
+      "src": "imgs/img_logo_sem__fundo_favicon/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
