# meta_2025  versão do sst 2.2.29v controle de CDG 31.70V    versão em testes
# meta_2025

versão do sst 2.2.29v
controle de CDG 31.70V

 versão em testes

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Metatup",
-  "short_name": "Metatup",
+  "name": "Metatup 2025",
+  "short_name": "Metatup 2025",
   "start_url": "https://teddyws1.github.io/meta_2025/",
   "scope": "./",
   "display": "standalone",
