--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,22 @@
 {
   "name": "Metatup 2025",
   "short_name": "Metatup 2025",
+  "version": "1.0.0",
   "start_url": "https://teddyws1.github.io/meta_2025/",
   "scope": "./",
   "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#000000",
+  "background_color": "#1F2A7F",
+  "theme_color": "#1F2A7F",
   "icons": [
     {
       "src": "https://teddyws1.github.io/meta_2025/imgs/img_logo_sem__fundo_favicon/android-chrome-192x192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any"
+      "type": "image/png"
     },
     {
       "src": "https://teddyws1.github.io/meta_2025/imgs/img_logo_sem__fundo_favicon/android-chrome-512x512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any"
+      "type": "image/png"
     }
   ]
 }
