--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
       "type": "image/png"
     },
     {
-      "src": "https://teddyws1.github.io/meta_2025/imgs/img_logo_sem__fundo_favicon/android-chrome-512x512.png",
+      "src":"https://i.postimg.cc/x1qKFqQ4/Gemini-Generated-Image-cc4mbfcc4mbfcc4m.png",
       "sizes": "512x512",
       "type": "image/png"
     }
