--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
   "theme_color": "#1F2A7F",
   "icons": [
     {
-      "src": "https://teddyws1.github.io/meta_2025/imgs/img_logo_sem__fundo_favicon/android-chrome-192x192.png",
+      "src": "https://i.postimg.cc/x1qKFqQ4/Gemini-Generated-Image-cc4mbfcc4mbfcc4m.png",
       "sizes": "192x192",
       "type": "image/png"
     },
