--- a/manifest.json
+++ b/manifest.json
@@ -5,22 +5,17 @@
   "start_url": "https://teddyws1.github.io/meta_2025/",
   "scope": "./",
   "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#000000",
+  "background_color": "#ffffff",
+  "theme_color": "#ffffff",
   "icons": [
     {
-      "src": "https://i.postimg.cc/x1qKFqQ4/Gemini-Generated-Image-cc4mbfcc4mbfcc4m.png",
+      "src": "https://teddyws1.github.io/meta_2025/imgs/img_logo_sem__fundo_favicon/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "https://teddyws1.github.io/meta_2025/imgs/img_logo_sem__fundo_favicon/android-chrome-512x512.png",
       "sizes": "512x512",
-      "type": "image/png"
-    },
-    {
-      "src": "https://i.postimg.cc/x1qKFqQ4/Gemini-Generated-Image-cc4mbfcc4mbfcc4m.png",
-      "sizes": "1024x1024",
-      "type": "image/png"
-    },
-    {
-      "src": "https://i.postimg.cc/x1qKFqQ4/Gemini-Generated-Image-cc4mbfcc4mbfcc4m.png",
-      "sizes": "2048x2048",
       "type": "image/png"
     }
   ]
