# meta_2025  versão do sst 3.3.32v controle de CDG 32.10V    versão em testes
# meta_2025

versão do sst 3.3.32v
controle de CDG 32.10V

 versão em testes

--- a/manifest.json
+++ b/manifest.json
@@ -9,12 +9,12 @@
   "theme_color": "#ffffff",
   "icons": [
     {
-      "src": "https://teddyws1.github.io/meta_2025/imgs/img_logo_sem__fundo_favicon/android-chrome-192x192.png",
+      "src": "https://i.postimg.cc/445Fmtps/img-meta-up.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://teddyws1.github.io/meta_2025/imgs/img_logo_sem__fundo_favicon/android-chrome-512x512.png",
+      "src": "https://i.postimg.cc/445Fmtps/img-meta-up.png",
       "sizes": "512x512",
       "type": "image/png"
     }
