--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "start_url": "https://teddyws1.github.io/meta_2025/",
   "scope": "./",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "#921717",
   "theme_color": "#ffffff",
   "icons": [
     {
