--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,24 @@
 {
-  "name": "Metatup 2025",
-  "short_name": "Metatup 2025",
-  "version": "2.2.31",
+  "name": "Meta_up 2025",
+  "short_name": "Meta_up",
+  "version": "2.2.32",
   "start_url": "https://teddyws1.github.io/meta_2025/",
-  "scope": "./",
+  "scope": "/",
   "display": "standalone",
-  "background_color": "#921717",
-  "theme_color": "#ffffff",
+  "background_color": "#000000",
+  "theme_color": "#000000",
   "icons": [
     {
       "src": "https://i.postimg.cc/445Fmtps/img-meta-up.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "https://i.postimg.cc/445Fmtps/img-meta-up.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
