--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,21 @@
 {
   "name": "Meta_up 2025",
-  "short_name": "Meta_up",
+  "short_name": "Meta_up 2025",
   "version": "2.2.32",
-  "start_url": "https://teddyws1.github.io/meta_2025/",
+  "start_url": "/?v=2.2.33",
   "scope": "/",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "https://i.postimg.cc/445Fmtps/img-meta-up.png",
+      "src": "https://i.postimg.cc/HkPdyn7G/Gemini-Generated-Image-7m1x1h7m1x1h7m1x.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "https://i.postimg.cc/445Fmtps/img-meta-up.png",
+      "src": "https://i.postimg.cc/HkPdyn7G/Gemini-Generated-Image-7m1x1h7m1x1h7m1x.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
