--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Meta_up 2025",
   "short_name": "Meta_up 2025",
   "version": "2.2.32",
-  "start_url": "/?v=2.2.33",
+  "start_url": "https://teddyws1.github.io/meta_2025/",
   "scope": "/",
   "display": "standalone",
   "background_color": "#000000",
