# meta_2025  versão do sst 3.3.34v controle de CDG 32.14V    versão em testes
# meta_2025

versão do sst 3.3.34v
controle de CDG 32.14V

 versão em testes

--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "scope": "/",
   "display": "standalone",
   "background_color": "#000000",
-  "theme_color": "#000000",
+  "theme_color": "#fffff",
   "icons": [
     {
       "src": "https://i.postimg.cc/HkPdyn7G/Gemini-Generated-Image-7m1x1h7m1x1h7m1x.png",
