--- a/manifest.json
+++ b/manifest.json
@@ -6,8 +6,9 @@
   "scope": "/",
   "display": "standalone",
   "background_color": "#000000",
-  "theme_color": "#fffff",
+  "theme_color": "#ffffff",
   "icons": [
+    
     {
       "src": "https://i.postimg.cc/HkPdyn7G/Gemini-Generated-Image-7m1x1h7m1x1h7m1x.png",
       "sizes": "192x192",
