--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,14 @@
 {
   "name": "Meta_up 2026",
-  "short_name": "Meta_up 2026",
+   "app": "Meta_up",
   "version": "4.5.37",
   "start_url": "https://teddyws1.github.io/meta_2025/",
   "scope": "/",
   "display": "standalone",
   "background_color": "#fff",
   "theme_color": "#ffffff",
-  "icons": [
+  "icons": 
+  [
     
     {
       "src": "https://i.postimg.cc/rsdDtZRn/android-chrome-192x192.png",
