Atualizar o manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "start_url": "https://teddyws1.github.io/meta_2026/",
   "scope": "/",
   "display": "standalone",
-  "background_color": "#fff",
+  "background_color": "#000000",
   "theme_color": "#ffffff",
   "icons": 
   [
