--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
   "name": "Meta_up 2026",
    "app": "Meta_up",
-  "version": "4.5.37",
-  "start_url": "https://teddyws1.github.io/meta_2025/",
+  "version": "4.6.38",
+  "start_url": "https://teddyws1.github.io/meta_2026/",
   "scope": "/",
   "display": "standalone",
-  "background_color": "#fff",
-  "theme_color": "#ffffff",
+  "background_color": "#000000",
+  "theme_color": "#000000",
   "icons": 
   [
     
